--- a/docs/_tex/index.tex
+++ b/docs/_tex/index.tex
@@ -309,60 +309,61 @@ the secured university MS forms.
 
   \begin{itemize}
   \item
-    do an inherited thrombophilia evaluation for women with histories of
+    Do an inherited thrombophilia evaluation for women with histories of
     pregnancy loss, fetal growth restriction (FGR), preeclampsia and
     abruption.
   \item
-    screen for fetal growth restriction (FGR) with Doppler blood flow
+    Screen for fetal growth restriction (FGR) with Doppler blood flow
     studies.
   \item
-    use progestogens for preterm birth prevention in uncomplicated
+    Use progestogens for preterm birth prevention in uncomplicated
     multifetal gestations.
   \item
-    perform routine cervical length screening for preterm birth risk
+    Perform routine cervical length screening for preterm birth risk
     assessment in asymptomatic women before 16 weeks of gestation or
     beyond 24 weeks of gestation.
   \item
-    perform antenatal testing on women with the diagnosis of gestational
-    diabetes who are well controlled by diet alone and without other
-    indications for testing.
+    Perform antenatal fetal wellbeing testing on women with the
+    diagnosis of gestational diabetes who are well controlled by diet
+    alone and without other indications for testing.
   \item
-    place women, even those at high-risk, on activity restriction to
+    Place women, even those at high-risk, on activity restriction to
     prevent preterm birth.
   \item
-    perform maternal serologic studies for cytomegalovirus and
+    Perform maternal serologic studies for cytomegalovirus and
     toxoplasma as part of routine prenatal laboratory studies.
   \item
-    perform serial cervical length measurement following cerclage
+    Perform serial cervical length measurement following cerclage
     placement.
   \item
-    test women for methylenetetrahydrofolate reductase mutations.
+    Test women for methylenetetrahydrofolate reductase (MTHFR)
+    mutations.
   \item
-    screen asymptomatic pregnant women for subclinical hypothyroidism.
+    Screen asymptomatic pregnant women for subclinical hypothyroidism.
   \item
-    perform routine cell-free DNA screening for microdeletions.
+    Perform routine cell-free DNA screening for microdeletions.
   \item
-    perform routine midtrimester serum biomarker risk stratification for
+    Perform routine midtrimester serum biomarker risk stratification for
     preterm birth or preeclampsia in asymptomatic women.
   \item
-    recommend delivery in a nondiabetic patient for suspected macrosomia
+    Recommend delivery in a nondiabetic patient for suspected macrosomia
     before 39 0/7 weeks of gestation.
   \item
-    do routine episiotomy in spontaneous vaginal births.
+    Do routine episiotomy in spontaneous vaginal births.
   \item
-    do electronic fetal monitoring for low risk women in labour.
+    Do electronic fetal monitoring for low risk women in labor.
   \item
-    perform umbilical artery Doppler studies as a routine screening test
+    Perform umbilical artery Doppler studies as a routine screening test
     in uncomplicated pregnancies with normal fetal growth.
   \item
-    do a caesarean delivery for failure of progress in labour in the
-    latent phase of labour for a woman at term with a singleton fetus
-    and vertex presentation.
+    Do a cesarean delivery for failure of progress in labor in the
+    latent phase of labor for a woman at term with a singleton fetus and
+    vertex presentation.
   \item
-    proceed to the early clamping (before 1 minute after birth) of the
-    umbilical cord.
+    Proceed to the early clamping (before 1 minute after birth) of the
+    umbilical cord in preterm births.
   \item
-    schedule routine repeated cesarean section (CS) in all the pregnant
+    Schedule routine repeated cesarean section (CS) in all the pregnant
     women with a previous cesarean section.
   \end{itemize}
 \end{itemize}
